fixing aesthetics, collapsing, and standardization on each page

--- a/public/css/tat.css
+++ b/public/css/tat.css
@@ -368,7 +368,7 @@ html {
     border-top-right-radius: 5px !important;
 }
 #letsgo-berlin {
-	width: 75px;
+	width: 85px;
 	height: 50px;
 	margin-top: 0px;
 	font-size: 12px !important;
@@ -382,7 +382,7 @@ html {
 	-moz-border-radius: 28;
 	border-radius: 28px;
 	color: #ffffff;
-	padding: 10px 20px 10px 20px;
+	padding: 8px 20px 8px 20px;
 	text-decoration: none;
     border-top-left-radius: 5px !important;
     border-bottom-left-radius: 5px !important;
